--- a/db-connections.ini.template
+++ b/db-connections.ini.template
@@ -23,6 +23,7 @@ zalf-wettreg = db.zalf-mysql
 ; abstract schemata for data on zalf server
 landcare = db.zalf-mysql
 monica = db.monica.sqlite
+;monica = db.monica.sqlite
 monica_buek = db.zalf-mysql
 eom = db.eom.sqlite
 landcare-dss = db.landcare-dss.sqlite
@@ -64,6 +65,9 @@ eva2 = eva2
 
 [db.monica.sqlite]
 filename = sqlite-db/monica.sqlite
+
+[db.monica-jv.sqlite]
+filename = sqlite-db/monica-jv.sqlite
 
 [db.eom.sqlite]
 filename = ../eom/eom.sqlite
