fixes to get MONICA compile on the cluster

--- a/monica-swig.pro.template
+++ b/monica-swig.pro.template
@@ -49,6 +49,6 @@ QMAKE_CFLAGS_DEBUG += -pg -w
 QMAKE_CXXFLAGS += -pg -w
 QMAKE_LFLAGS += -pg -w
 
-SWIG_FILES = monica.i
+SWIG_FILES = monica-swig/monica.i
 
 LIBS += -lpython2.6
