--- a/monica.pro.template
+++ b/monica.pro.template
@@ -33,6 +33,7 @@ unix {
 DEFINES += STANDALONE
 
 HERMES:DEFINES += NO_MYSQL NO_GRIDS NO_MPMAS
+SWIG_CMD_MONICA_DEFS += -DNO_MYSQL -DNO_GRIDS -DNO_MPMAS
 
 # monica code
 HEADERS += src/soilcolumn.h
