mainly fixed and updated carbiocial climate data loading function
some further fixes to get the code working on the cluster

--- a/monica.pro.template
+++ b/monica.pro.template
@@ -44,12 +44,14 @@ HEADERS += src/soilorganic.h
 HEADERS += src/monica.h
 HEADERS += src/monica-parameters.h
 HEADERS += src/crop.h
-#HEADERS += src/eva_methods.h
 HEADERS += src/monica-eom.h
 HEADERS += src/simulation.h
 HEADERS += src/debug.h
+HEADERS += src/conversion.h
+
 #HEADERS += src/cc_germany_methods.h
 #HEADERS += src/gis_simulation_methods.h
+#HEADERS += src/eva_methods.h
 HEADERS += src/carbiocial.h
 
 SOURCES += src/monica-main.cpp
@@ -61,12 +63,14 @@ SOURCES += src/soilorganic.cpp
 SOURCES += src/monica.cpp
 SOURCES += src/monica-parameters.cpp
 SOURCES += src/crop.cpp
-SOURCES += src/eva_methods.cpp
 SOURCES += src/monica-eom.cpp
 SOURCES += src/simulation.cpp
 SOURCES += src/debug.cpp
-SOURCES += src/cc_germany_methods.cpp
-SOURCES += src/gis_simulation_methods.cpp
+SOURCES += src/conversion.cpp
+
+#SOURCES += src/eva_methods.cpp
+#SOURCES += src/cc_germany_methods.cpp
+#SOURCES += src/gis_simulation_methods.cpp
 SOURCES += src/carbiocial.cpp
 
 # db library code
