--- a/monica-hermes/monica-hermes.vcxproj.filters.template
+++ b/monica-hermes/monica-hermes.vcxproj.filters.template
@@ -31,12 +31,15 @@
     <Filter Include="Quelldateien\tools">
       <UniqueIdentifier>{1d163105-0511-48c6-8ed6-9dbecd3fccd0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Headerdateien\soil">
+      <UniqueIdentifier>{e2dde81d-e54f-4980-9349-5571ae8a307d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\soil">
+      <UniqueIdentifier>{e7756b24-d80f-4b22-86f1-54774ec300f5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\crop.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\debug.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="..\src\monica-parameters.h">
@@ -66,9 +69,6 @@
     <ClInclude Include="..\src\monica-typedefs.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\conversion.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\util\db\abstract-db-connections.h">
       <Filter>Headerdateien\db</Filter>
     </ClInclude>
@@ -96,12 +96,24 @@
     <ClInclude Include="..\..\util\climate\climate-common.h">
       <Filter>Headerdateien\climate</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\carbiocial.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\util\soil\soil.h">
+      <Filter>Headerdateien\soil</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\util\soil\constants.h">
+      <Filter>Headerdateien\soil</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\util\soil\conversion.h">
+      <Filter>Headerdateien\soil</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\util\tools\debug.h">
+      <Filter>Headerdateien\tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\crop.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\debug.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="..\src\monica-parameters.cpp">
@@ -131,9 +143,6 @@
     <ClCompile Include="..\src\monica-hermes-main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\conversion.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\util\db\sqlite3.c">
       <Filter>Quelldateien\db</Filter>
     </ClCompile>
@@ -153,6 +162,21 @@
       <Filter>Quelldateien\tools</Filter>
     </ClCompile>
     <ClCompile Include="..\..\util\tools\read-ini.cpp">
+      <Filter>Quelldateien\tools</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\carbiocial.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\util\soil\constants.cpp">
+      <Filter>Quelldateien\soil</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\util\soil\conversion.cpp">
+      <Filter>Quelldateien\soil</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\util\soil\soil.cpp">
+      <Filter>Quelldateien\soil</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\util\tools\debug.cpp">
       <Filter>Quelldateien\tools</Filter>
     </ClCompile>
   </ItemGroup>
