Added implementation of a simple automatic harvest trigger;
* When using monica-hermes, a automatic harvest trigger can be activated
that harvests a crop when maturity is reached;
* Added a column in the monica.sqlite database where a fallback day for
latest harvest is configured,; this needed to be done to ensure, that a
crop is harvested although maturity was not reached;
* until now, the harvest trigger can only be activated globally for all
crops; using the JSON format it should be possible to us the trigger
only for selected crops in the crop rotation

--- a/monica.ini.template
+++ b/monica.ini.template
@@ -30,6 +30,10 @@ activated=0
 ;nitrate=0
 ;sulfate=0
 
+[harvest_trigger]
+activated = 0
+;harvest_time=maturity
+
 [site_parameters]
 latitude=52.809399
 slope=0.0
