--- a/.gitignore
+++ b/.gitignore
@@ -200,8 +200,4 @@ installer/Hohenfinow2/*.dat
 *.vcxproj
 *.filters
 HF2_automatic_yield
-/residues
-/organic-fertilisers
-/mineral-fertilisers
-/crop-parameters
-/user-parameters
+/parameters
