cleanup and small bug fix
- in soil organic three instance vars where uninitialized (probably due
to refactorings lately)
- removed setter in soil layer for soil organic matter, as only one of
the two soil organic carbon/matter should be used within monica, the
other one should be read only

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ installer/Hohenfinow2/*.dat
 HF2_automatic_yield
 /parameters
 src/run/production-process.h.autosave
+/installer/Hohenfinow2/smout.csv
+/installer/Hohenfinow2/rmout.csv
+/installer/Hohenfinow2/inputs.json
