added cmake project file + fixed typo and type declaration to prevent compiler warning

--- a/project-files/monica.pro.template
+++ b/project-files/monica.pro.template
@@ -126,7 +126,7 @@ SOURCES += $${UTIL_DIR}/climate/climate-common.cpp
 
 # json11 library code
 #-------------------------------------------
-HEADERS += $${UTIL_DIR}/json11/json11.h
+HEADERS += $${UTIL_DIR}/json11/json11.hpp
 SOURCES += $${UTIL_DIR}/json11/json11.cpp
 
 # tools library code
